Added readme to external folder.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 build/
 .vscode/
 
-# MUST be ignored due to licensing. Do NOT let this push.
-external/
+# MUST be ignored due to licensing. Do NOT let contents push except for the README.
+external/*
+!external/README-SDK.md
